# openrouter-cli

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.agent_docs/: makefile.md  openrouter-api.md  opentelemetry.md  python.md
docs/: README.md
specs/: BACKLOG.md
src/openrouter_cli/: __init__.py  api_client.py  cli.py  config.py  logging_config.py
tests/: test_api_client.py  test_cli.py  test_config.py
